test/tests/PreconditionBadPre.expected
PreconditionBadPre.frost:11:12: error: cannot use '@pre' in a method which overrides another method; did you mean '@preOr'?
1 error
