test/tests/PreconditionBadPre.frost
@extendable
class PreconditionBadPre1 {
    @extendable
    @pre(x > 0)
    method test(x:Int) {
    }
}

class PreconditionBadPre2 : PreconditionBadPre1 {
    @override
    @pre(x < -10)
    method test(x:Int) {
    }
}